# dasImguiNodeEditor

./: .das_module  .das_package  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  STATE.md
.github/workflows/: docs.yml  tests.yml
bind/: bind_imgui_node_editor.das
daslib/: imgui_editor_playwright.das  imgui_node_editor_app.das  imgui_node_editor_boost.das  imgui_node_editor_boost_v2.das  imgui_node_editor_lint.das  imgui_node_editor_live.das  imgui_node_editor_theme_daslang.das
doc/source/: conf.py  index.rst  tutorial_video.py
doc/source/_templates/: layout.html
doc/source/stdlib/: external_types.rst  index.rst  sec_boost_v2.rst  sec_lint.rst  sec_live_commands.rst  sec_testing.rst  sec_theme.rst
doc/source/stdlib/handmade/: module-imgui_editor_playwright.rst  module-imgui_node_editor_app.rst  module-imgui_node_editor_boost_v2.rst  module-imgui_node_editor_theme_daslang.rst
doc/source/tutorials/: clipboard.rst  connect_by_drag.rst  context_menus.rst  create_by_drag.rst  delete_and_select.rst  first_graph.rst  groups.rst  index.rst  navigation.rst  styling.rst
examples/node-editor/: call_forms.das  shader_graph.das
examples/tutorial/: clipboard.das  connect_by_drag.das  context_menus.das  create_by_drag.das  delete_and_select.das  first_graph.das  groups.das  navigation.das  styling.das
imgui-node-editor/: imgui_node_editor.cpp
src/: cb_dasIMGUI_NODE_EDITOR.h  dasIMGUI_NODE_EDITOR.cpp  dasIMGUI_NODE_EDITOR.dummy.add.inc  dasIMGUI_NODE_EDITOR.enum.add.inc  dasIMGUI_NODE_EDITOR.enum.class.inc  dasIMGUI_NODE_EDITOR.enum.decl.cast.inc  dasIMGUI_NODE_EDITOR.enum.decl.inc  dasIMGUI_NODE_EDITOR.func_1.cpp  dasIMGUI_NODE_EDITOR.func_2.cpp  dasIMGUI_NODE_EDITOR.func_3.cpp  dasIMGUI_NODE_EDITOR.func_4.cpp  dasIMGUI_NODE_EDITOR.func_5.cpp  dasIMGUI_NODE_EDITOR.func_6.cpp  dasIMGUI_NODE_EDITOR.main.cpp  dasIMGUI_NODE_EDITOR.struct.add.inc  dasIMGUI_NODE_EDITOR.struct.cast.inc  dasIMGUI_NODE_EDITOR.struct.class.inc  dasIMGUI_NODE_EDITOR.struct.decl.inc  dasIMGUI_NODE_EDITOR.struct.impl.inc  dasIMGUI_NODE_EDITOR.struct.postadd.inc
tests/integration/: failed_node_editor_lint_raw.das  record_clipboard.das  record_connect_by_drag.das  record_context_menus.das  record_create_by_drag.das  record_delete_and_select.das  record_first_graph.das  record_groups.das  record_navigation.das  record_styling.das  test_call_forms.das  test_clipboard.das  test_clipboard_tutorial.das  test_connect_drag.das  test_context_menu.das  test_context_menus.das  test_create_by_drag.das  test_delete_and_select.das  test_flow.das  test_groups.das  test_link_rules.das  test_navigation.das  test_new_node_drag.das  test_node_editor_lint_allow.das  test_node_editor_lint_off.das  test_node_group.das  test_node_ops.das  test_render_config.das  test_shader_graph.das  test_shortcuts.das  test_snapshot_space.das  test_styling.das  test_topology.das
utils/: node_editor2rst.das  rerecord.ps1
